[tool.poetry]
name = "pyresttest"
version = "0.1.0"
description = ""
authors = ["valerie synenko <valerii.synenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^9.0.1"
requests = "^2.32.5"
pydantic = "^2.12.5"
faker = "^38.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
