[tool.poetry]
name = "python-backend-tests"
version = "0.1.1"
description = "Back End automated testing pet-project"
authors = ["valerii synenko <valerii.synenko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^9.0.1"
requests = "^2.32.5"
pydantic = "^2.12.5"
faker = "^38.2.0"
python-dotenv = "^1.2.1"
pre-commit = "^4.5.0"
allure-pytest = "^2.15.2"

[tool.black]
line-length = 100
target-version = ["py310"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
